mule-user-guide/v/3.2/using-mule-configuration-patterns.adoc
= Using Mule Configuration Patterns

== Introduction

Configuring Mule involves XML, and though using a decent XML editor can help a lot (thanks to the contextual help it provides from Mule's schemas), there are still a enough angle brackets to warrant a coffee break as projects get more complicated. As the number of services in a Mule project increases, so does the amount of noise in its configuration files, making it harder and harder to understand and maintain them. In Mule 3, we've decided to tackle this problem with the introduction of pattern-based configuration.

== XML namespace:

[source, xml, linenums]
----
xmlns:pattern="http://www.mulesoft.org/schema/mule/pattern"
----

== XML Schema location:

[source, code, linenums]
----
http://www.mulesoft.org/schema/mule/pattern http://www.mulesoft.org/schema/mule/pattern/3.1/mule-pattern.xsd
----

== When to Use a Pattern

[TIP]
*A configuration pattern provides a very specific integration feature*.

The following table will help you pick up the configuration pattern that fits your needs.

[cols=",",options="header",]
|===
|Pattern Name |Usage
|link:/documentation-3.2/display/32X/Simple+Service+Pattern[Simple Service] |Exposes JAX-WS annotated components as SOAP web services. Exposes JAX-RS annotated beans as RESTful components. Can also handle JAXB, XML and raw content with simple POJO components.
|link:/documentation-3.2/display/32X/Web+Service+Proxy+Pattern[Web Service Proxy] |Proxies remote web services. Can perform transformations on the SOAP envelope. Can rewrite or redirect remote WSDLs to local ones.
|link:/documentation-3.2/display/32X/Bridge+Pattern[Bridge] |Establishes a direct conduit between an inbound endpoint and an outbound endpoint. Supports request-response and one-way bridging. Can perform transformations. Supports transactional bridging of inbound to outbound.
|link:/documentation-3.2/display/32X/Validator+Pattern[Validator] |Validates inbound messages against a defined acceptance filter. Returns an ACK or NACK response synchronously and dispatches valid messages asynchronously.
|===

Should none of the existing patterns satisfy your need, turn to link:/documentation-3.2/display/32X/Using+Flows+for+Service+Orchestration[Using Flows for Service Orchestration] for advanced configuration mechanisms.

== Related Topics

* link:/documentation-3.2/display/32X/Pattern-Based+Configuration[Pattern-Based Configuration]
* http://forums.mulesoft.org/forum.jspa?forumID=148[Providing feedback or suggesting new Patterns]
